Update index.html && screen.scss

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -362,6 +362,12 @@ section.contact-us {
         font: 500 16px 'Liberation Sans', sans-serif;
         color: #a3a2a2;
       }
+      .map {
+        float: left;
+      }
+      .contact {
+        float: right;
+      }
     }
   }
 }
