--- a/stylesheets/reset.css
+++ b/stylesheets/reset.css
@@ -2,3 +2,9 @@ a{
     color: black;
     text-decoration: none;
 }
+sup {
+    vertical-align: super !important;
+}
+sub {
+    vertical-align: sub !important;
+}
