--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -341,6 +341,9 @@ section.talk-us .wrapper .content p {
   line-height: 1.5em;
 }
 
+section.contact-us {
+  overflow: hidden;
+}
 section.contact-us .wrapper .content {
   text-align: center;
 }
@@ -364,6 +367,8 @@ section.contact-us .wrapper .content .contact {
   float: left;
 }
 section.contact-us .wrapper .content .contact form h3 {
+  margin-left: 40px;
+  text-align: left;
   font: bold 20px 'Liberation Sans', sans-serif;
   margin-bottom: 20px;
 }
@@ -373,11 +378,15 @@ section.contact-us .wrapper .content .contact form ul {
 section.contact-us .wrapper .content .contact form ul li:nth-child(3), section.contact-us .wrapper .content .contact form ul li:first-child, section.contact-us .wrapper .content .contact form ul li:nth-child(2) {
   margin-bottom: 20px;
 }
-section.contact-us .wrapper .content .contact form ul li span {
+section.contact-us .wrapper .content .contact form ul li div.list-address {
+  text-align: left;
+  width: 289px;
+}
+section.contact-us .wrapper .content .contact form ul li div.list-address span {
   display: inline;
   color: #9d9c9c;
 }
-section.contact-us .wrapper .content .contact form ul li span.fa {
+section.contact-us .wrapper .content .contact form ul li div.list-address span.fa {
   margin-right: 20px;
   font-size: 20px;
   color: #f27554;
@@ -404,12 +413,34 @@ section.contact-us .wrapper .content .contact form ul li textarea {
 section.contact-us .wrapper .content .contact form input[type="submit"] {
   float: left;
   margin-left: 120px;
+  margin-top: 5px;
   padding: 10px 30px;
   background-color: #f27554;
   border: none;
   border-radius: 5px;
   font-size: 18px;
   color: white;
+}
+
+footer {
+  position: relative;
+  bottom: -200px;
+  margin-top: 70px;
+}
+footer .wrapper {
+  margin: 0;
+}
+footer .wrapper .content {
+  position: relative;
+  bottom: 90px;
+  clear: both;
+  background-color: #f27554;
+}
+footer .wrapper .content h4 {
+  position: relative;
+  padding: 30px 0;
+  text-align: center;
+  color: #fff;
 }
 
 @media (min-width: 900px) {
