--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -334,6 +334,7 @@ section.talk-us .wrapper .content h2 span {
 }
 section.talk-us .wrapper .content p {
   display: inline-block;
+  margin-bottom: 50px;
   font-size: 18px;
   width: 850px;
   color: white;
@@ -372,7 +373,7 @@ section.contact-us .wrapper .content .contact form h3 {
   margin-bottom: 20px;
 }
 section.contact-us .wrapper .content .contact form ul {
-  margin-left: 120px;
+  margin-left: 90px;
 }
 section.contact-us .wrapper .content .contact form ul li:nth-child(3), section.contact-us .wrapper .content .contact form ul li:first-child, section.contact-us .wrapper .content .contact form ul li:nth-child(2) {
   margin-bottom: 20px;
@@ -411,7 +412,7 @@ section.contact-us .wrapper .content .contact form ul li textarea {
 }
 section.contact-us .wrapper .content .contact form input[type="submit"] {
   float: left;
-  margin-left: 120px;
+  margin-left: 90px;
   margin-top: 5px;
   padding: 10px 30px;
   background-color: #f27554;
